# Minesweeper-E

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Empaerior.sln  README.md  cmake_install.cmake  premake5.lua
Application/: ALL_BUILD.vcxproj  Application.sln  Application.vcxproj  Application.vcxproj.filters  CMakeLists.txt  cmake_install.cmake  icon.rc  imgui.ini
Application/Src/: Application.cpp  Minesweeper.cpp  Minesweeper.h
Empaerior/: CMakeLists.txt  Empaerior.vcxproj  Empaerior.vcxproj.filters  cmake_install.cmake  config.json  results.json  stresstest.txt
Empaerior/Src/: Application.cpp  Application.h  AssetManager.cpp  AssetManager.h  Camera.cpp  Camera.h  Empaerior.h  EventHandler.cpp  EventHandler.h  Game.cpp  Game.h  Glyphs.cpp  Glyphs.h  Ptr_Wrappers.h  SDL_PTR.h  SDL_Wrappers.h  Sprite.cpp  Sprite.h  State.cpp  State.h  Timer.cpp  Utilities.h  Vec2.h  Window.cpp  Window.h  main.cpp  main.h  pch.h
Empaerior/Src/Exceptions/: Exceptions.h
Empaerior/Src/SDL Wrappers/: Ptr_Wrappers.h  SDL_Wrappers.h
Empaerior/Src/SDLwrappers/: Ptr_Wrappers.h  Rendering_Wrappers.h  SDL_Wrappers.h
Empaerior/Src/State/: State.cpp  State.h
Empaerior/Src/assetmanager/: AssetManager.cpp  AssetManager.h
Empaerior/Src/core/: Point2.h  Rect.h  Vector2.h  unsafe_vector.h
Empaerior/Src/core/debugging/: Log.cpp  get_data_info.h  v_proffiler.h
Empaerior/Src/core/defines/: Basic_Defines.h  Defines.h  Struct_Defines.h
Empaerior/Src/core/ecs/: ECS.h  Entity.h
Empaerior/Src/core/ecs/components/: ComponentManager.h
Empaerior/Src/core/ecs/system/: system.h
Empaerior/Src/core/exceptions/: Exceptions.h
Empaerior/Src/core/utilities/: Math.h  Timer.cpp  Timer.h  Utilities.cpp  Utilities.h
Empaerior/Src/debugging/: v_proffiler.h
Empaerior/Src/defines/: Basic_Defines.h  Defines.h
Empaerior/Src/entitysystem/: ECS.h  Entity.h
Empaerior/Src/entitysystem/components/: Component.h  ComponentManager.h
Empaerior/Src/entitysystem/system/: system.h
Empaerior/Src/entitysystem/system/systems/: Systems.h  camera_system.h  event_system.h  mine_sweeper_system.cpp  mine_sweeper_system.h  print_system.h  sprite_system.h
Empaerior/Src/eventhandler/: EventHandler.cpp  EventHandler.h
Empaerior/Src/exceptions/: Exceptions.h
Empaerior/Src/graphics/glyphs/: Glyphs.cpp  Glyphs.h
Empaerior/Src/graphics/rendering/: Camera.cpp  Camera.h  Window.cpp  Window.h
Empaerior/Src/graphics/rendering/objects/: Sprite.cpp  Sprite.h
Empaerior/Src/input/: input.h  keyboard.h  mouse.cpp  mouse.h
Empaerior/Src/input/eventhandler/: EventHandler.h
Empaerior/Src/rendering/: Camera.cpp  Camera.h  Window.cpp  Window.h
Empaerior/Src/rendering/SDLwrappers/: Rendering_Wrappers.h  SDL_Wrappers.h
Empaerior/Src/rendering/glyphs/: Glyphs.cpp  Glyphs.h
Empaerior/Src/rendering/objects/: Sprite.cpp  Sprite.h
Empaerior/Src/systems/: Component.h  Systems.cpp  Systems.h
Empaerior/Src/utilities/: Math.h  Rect.h  Timer.cpp  Timer.h  Utilities.cpp  Utilities.h  Vector2.h  collisions.h
SDL2/include/: SDL_events.h  SDL_pixels.h
bin-int/Debug-windows-/Empaerior/: vc141.idb  vc142.idb
bin-int/Debug-windows-/Empaerior/Empaerior.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Empaerior.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.write.1.tlog
bin-int/Dist-windows-/Empaerior/: icon.res  vc141.idb  vc142.idb
bin-int/Dist-windows-/Empaerior/Empaerior.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Empaerior.lastbuildstate  link.1152.delete.1.tlog  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
